# graph-ddxplus

./: .env.example  .gitignore  BENCHMARK_COVERAGE.md  CLAUDE.md  EXCLUDED_SOURCES.md  HANDOFF.md  README.md  SOURCES.md  docker-compose.yml  hantopic.md  pyproject.toml  run.py
archive/v1_ddxplus/: README.md  REVIEW.md  docker-compose.benchmark.yml  pyproject.toml
archive/v1_ddxplus/paper/: draft.md  draft_kr.md  export_fig1.sh  fig1_system_overview.html
archive/v1_ddxplus/pipeline/: README.md  step0_download_ddxplus.py  step0a_setup_mmsys.sh  step1_build_kg.py  step1a_extract_umls.py  step1b_build_umls_full_kg.py  step1c_build_multi_source_kg.py  step2_build_mappings.py  step2a_build_symcat_mappings.py  step2b_build_rarebench_mappings.py  step3_setup_neo4j.sh  step4_exploration_anova.py  step5_final_diagnosis.sh  step6_comparison.sh
archive/v1_ddxplus/scripts/: analyze_disease_failure.py  analyze_failure_cases.py  analyze_failure_root_cause.py  analyze_gtpa10_failures.py  analyze_hit_rate.py  analyze_hit_rate_curve.py  analyze_hit_rate_curve_v2.py  analyze_hit_rate_curve_v2_full.py  analyze_il_distribution.py  analyze_kg_hit_rate_v2.py  analyze_max_il30_reached.py  analyze_optimal_topn.py  analyze_remaining_failures.py  analyze_viral_pharyngitis.py  baseline_simple.py  benchmark_dxbench.py  benchmark_er_reason.py  benchmark_instruct_reason.py  benchmark_kg_full_metrics.py  benchmark_kg_only.py  benchmark_kg_parallel.py  benchmark_max_il_single.py  benchmark_max_il_sweep.py  benchmark_max_il_sweep_v2.py  benchmark_rarebench.py  benchmark_symcat.py  benchmark_vllm.py  (+76 more)
(+693 files in other folders)
