[project]
name = "graph-ddxplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.7.0",
    "langchain>=1.2",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.9.0",
    "transformers>=4.56.0,<5",
    "vllm>=0.15.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
